--- a/lib/everdeploy_web/templates/layout/app.html.eex
+++ b/lib/everdeploy_web/templates/layout/app.html.eex
@@ -1,3 +1,32 @@
-<main role="main" class="container">
+<%
+  info = get_flash(@conn, :info)
+  error = get_flash(@conn, :error)
+%>
+<div class="container">
+  <%= if info do %>
+    <article class="message is-info info-flash">
+      <div class="message-header">
+        <p>Info</p>
+        <button class="delete" aria-label="delete"></button>
+      </div>
+      <div class="message-body">
+        <%= info %>
+      </div>
+    </article>
+  <% end %>
+
+
+  <%= if error do %>
+    <article class="message is-danger error-flash">
+      <div class="message-header">
+        <p>Error</p>
+        <button class="delete" aria-label="delete"></button>
+      </div>
+      <div class="message-body">
+        <%= error %>
+      </div>
+    </article>
+  <% end %>
+
   <%= @inner_content %>
-</main>
+</div>
