--- a/lib/everdeploy_web/templates/layout/live.html.leex
+++ b/lib/everdeploy_web/templates/layout/live.html.leex
@@ -1,4 +1,28 @@
 <div class="container">
-<%= @inner_content %>
-</div>
+  <%= if live_flash(@flash, :info) do %>
+    <article class="message is-info info-flash" phx-click="lv:clear-flash" phx-value-key="info">
+      <div class="message-header">
+        <p>Info</p>
+        <button class="delete" aria-label="delete"></button>
+      </div>
+      <div class="message-body">
+        <%= live_flash(@flash, :info) %>
+      </div>
+    </article>
+  <% end %>
 
+
+  <%= if live_flash(@flash, :error) do %>
+    <article class="message is-danger error-flash" phx-click="lv:clear-flash" phx-value-key="error">
+      <div class="message-header">
+        <p>Error</p>
+        <button class="delete" aria-label="delete"></button>
+      </div>
+      <div class="message-body">
+        <%= live_flash(@flash, :error) %>
+      </div>
+    </article>
+  <% end %>
+
+  <%= @inner_content %>
+</div>
