--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -14,15 +14,10 @@
   margin: 0 auto;
 }
 
-.navbar-item {
-  &.has-dropdown {
-    .navbar-dropdown {
-      display: none;
-    }
-    &.is-active {
-      .navbar-dropdown {
-        display: block;
-      }
-     }
-   }
+.live-content {
+  margin: 20px auto;
+}
+
+.bottoms {
+  margin-bottom: 10px;
 }
