Found a perfect timeline.

--- a/lib/everdeploy_web/live/server/server.html.leex
+++ b/lib/everdeploy_web/live/server/server.html.leex
@@ -1,7 +1,12 @@
-<div class="media text-muted pt-3">
-  <img alt="32x32" class="mr-2 rounded" style="width: 32px; height: 32px;" >
-  <p class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
-    <strong class="d-block text-gray-dark">@username</strong>
-    Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
-  </p>
+<div class="cd-timeline-block">
+  <div class="cd-timeline-img cd-picture">
+    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/cd-icon-picture.svg" alt="Picture">
+  </div>
+
+  <div class="cd-timeline-content">
+    <h2>Title of section 1</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
+    <a href="#0" class="cd-read-more">Read more</a>
+    <span class="cd-date">Jan 14</span>
+  </div>
 </div>
