--- a/lib/everdeploy_web/live/page_live.html.leex
+++ b/lib/everdeploy_web/live/page_live.html.leex
@@ -1,15 +1,6 @@
-<main role="main" class="container">
-  <div class="d-flex align-items-center p-3 my-3 text-white-50 bg-purple rounded box-shadow">
-    <img class="mr-3" src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-outline.svg" alt="" width="48" height="48">
-    <div class="lh-100">
-      <h6 class="mb-0 text-white lh-100">Bootstrap</h6>
-      <small>Since 2011</small>
-    </div>
-  </div>
-  <div class="my-3 p-3 bg-white rounded box-shadow">
-    <%= if @loading, do: "loading", else: "" %> 
+<section id="cd-timeline" class="cd-container">
+  <%= if @loading, do: "loading", else: "" %> 
     <%= for branch <- @evercam_server_branches do %>
-      <%= live_component @socket, Server, id: branch.sha, branch: branch %>
-    <% end %>
-  </div>
-</main>
+    <%= live_component @socket, Server, id: branch.sha, branch: branch %>
+  <% end %>
+</section> <!-- cd-timeline -->
