--- a/lib/everdeploy_web/live/server/server.html.leex
+++ b/lib/everdeploy_web/live/server/server.html.leex
@@ -1,12 +1,14 @@
 <div class="cd-timeline-block">
   <div class="cd-timeline-img cd-picture">
-    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/148866/cd-icon-picture.svg" alt="Picture">
+    <img src="<%= @branch.avatar_url %>">
   </div>
 
   <div class="cd-timeline-content">
-    <h2>Title of section 1</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
-    <a href="#0" class="cd-read-more">Read more</a>
-    <span class="cd-date">Jan 14</span>
+    <h2><%= @branch.branch_name %></h2>
+    <p style="overflow: auto;">
+      <%= @branch.commit_message %>
+    </p>
+    <a href="#0" class="cd-read-more">Deploy</a>
+    <span class="cd-date"><%= @branch.commit_date %></span>
   </div>
 </div>
